test/langtools/tools/javac/SuperInit/EarlyIndirectOuterCapture.out
EarlyIndirectOuterCapture.java:21:60: compiler.err.cant.ref.before.ctor.called: this
1 error
